FIX: gap

--- a/app/assets/stylesheets/common/admin/dashboard.scss
+++ b/app/assets/stylesheets/common/admin/dashboard.scss
@@ -688,9 +688,6 @@
     padding-right: 0.5em;
     width: 100%;
   }
-  &__feature-description {
-    padding-top: 1em;
-  }
   &__header {
     display: flex;
     align-items: flex-start;
